--- a/management_and_testing/config.yaml
+++ b/management_and_testing/config.yaml
@@ -7,10 +7,20 @@ model:
   beta2: 0.02
   num_timestamps: 1000
 
+augmentations:
+  _target_: torchvision.transforms.Compose
+  transforms:
+      - _target_: torchvision.transforms.ToTensor
+      - _target_: torchvision.transforms.Normalize
+        mean: [0.5, 0.5, 0.5]
+        std: [0.5, 0.5, 0.5]
+  #    - _target_: torchvision.transforms.RandomHorizontalFlip
+  #      p: 0.5
+
 optimizer:
   _target_: torch.optim.Adam
   lr: 1e-5
-  betas: (0.9, 0.999)
+  betas: [0.9, 0.999]
 
 training:
   num_epochs: 100
