--- a/management_and_testing/config.yaml
+++ b/management_and_testing/config.yaml
@@ -14,8 +14,6 @@ augmentations:
       - _target_: torchvision.transforms.Normalize
         mean: [0.5, 0.5, 0.5]
         std: [0.5, 0.5, 0.5]
-      - _target_: torchvision.transforms.RandomHorizontalFlip
-        p: 0.5
 
 optimizer:
   _target_: torch.optim.Adam
@@ -23,10 +21,10 @@ optimizer:
   betas: [0.9, 0.999]
 
 training:
-  num_epochs: 20
-  batch_size: 128
+  num_epochs: 15
+  batch_size: 256
   num_workers: 4
 
 wandb:
   project: "efdl_hw"
-  name: "random_flip"
+  name: "epochs_and_batch_size"
