--- a/fast_pipeline/requirements.txt
+++ b/fast_pipeline/requirements.txt
@@ -8,7 +8,7 @@ pandas==1.5.3
 py-spy==0.3.14
 einops==0.7.0
 torch==2.2.0
-torchtext
+torchtext==0.17.0
 torchvision==0.17.0
 tqdm==4.64.1
 vit_pytorch==0.40.2
